[tool.poetry]
name = "sample_agent"
version = "0.1.0"
description = "Starter"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-openai = "0.3.16"
langchain-anthropic = "^0.2.1"
langchain = "0.3.25"
openai = "^1.51.0"
langchain-community = "^0.3.1"
copilotkit = "0.1.42"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "0.3.59"
langgraph-cli = {extras = ["inmem"], version = "~0.2.7"}
langgraph = "0.4.3"
langgraph-prebuilt = "0.1.8"

[tool.poetry.scripts]
demo = "sample_agent.demo:main"
